fix: overflow-y scroll

--- a/src/components/Devices/AudioProSpeaker/audiopro.css
+++ b/src/components/Devices/AudioProSpeaker/audiopro.css
@@ -9,7 +9,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .audiopro-focused-buttton {
